--- a/src/application/LoginWindow.fxml
+++ b/src/application/LoginWindow.fxml
@@ -1,22 +1,42 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import java.lang.*?>
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.LoginWindowController">
+<AnchorPane prefHeight="204.99940000001516" prefWidth="270.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="application.LoginWindowController">
   <!-- TODO Add Nodes -->
   <children>
-    <Pane layoutX="0.0" layoutY="0.0" prefHeight="200.0" prefWidth="200.0">
+    <GridPane alignment="TOP_LEFT" gridLinesVisible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
       <children>
-        <Button fx:id="LoginButton" layoutX="26.0" layoutY="161.0" mnemonicParsing="false" onAction="#Login" text="Login" />
-        <TextField fx:id="UsernameTB" layoutX="0.0" layoutY="55.0" prefWidth="200.0" />
-        <TextField fx:id="PasswordTF" layoutX="0.0" layoutY="100.0" prefWidth="200.0" />
-        <Label layoutX="72.0" layoutY="39.0" text="Username" />
-        <Label layoutX="72.0" layoutY="84.0" text="Password" />
-            <Button fx:id="RegisterButton" layoutX="122.0" layoutY="161.0" mnemonicParsing="false" onAction="#RegisterClick" text="Register" />
+        <Label text="Username" visible="true" GridPane.columnIndex="0" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
+        <Label alignment="CENTER" contentDisplay="CENTER" text="Password" GridPane.columnIndex="0" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
+        <TextField fx:id="UsernameTB" prefWidth="200.0" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="1" />
+        <TextField fx:id="PasswordTF" alignment="CENTER_LEFT" prefWidth="200.0" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="2" />
+        <Label text="Parking system" textAlignment="JUSTIFY" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="0" GridPane.valignment="CENTER" />
+        <Button fx:id="RegisterButton" mnemonicParsing="false" onAction="#RegisterClick" text="Sign in" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER">
+          <GridPane.margin>
+            <Insets />
+          </GridPane.margin>
+        </Button>
+        <Button fx:id="LoginButton" mnemonicParsing="false" onAction="#Login" text="Login" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER" />
       </children>
-    </Pane>
+      <columnConstraints>
+        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="120.0" />
+        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+      </columnConstraints>
+      <rowConstraints>
+        <RowConstraints fillHeight="true" maxHeight="49.0" minHeight="10.0" prefHeight="49.0" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="49.0" minHeight="10.0" prefHeight="49.0" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="49.0" minHeight="10.0" prefHeight="49.0" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="49.0" minHeight="10.0" prefHeight="49.0" vgrow="SOMETIMES" />
+      </rowConstraints>
+    </GridPane>
   </children>
+  <padding>
+    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+  </padding>
 </AnchorPane>
