--- a/src/application/EmployeeWindow.fxml
+++ b/src/application/EmployeeWindow.fxml
@@ -14,21 +14,21 @@
          <children>
         <MenuBar>
           <menus>
-                  <Menu mnemonicParsing="false" text="&lt;Employe name&gt;">
+                  <Menu fx:id="NameMenuBar" mnemonicParsing="false" text="&lt;Employe name&gt;">
                      <items>
-                        <MenuItem mnemonicParsing="false" text="Change user" />
-                        <MenuItem mnemonicParsing="false" text="Exit" />
+                        <MenuItem fx:id="ChangeUserMenuItem" mnemonicParsing="false" text="Change user" />
+                        <MenuItem fx:id="ExitMenuItem" mnemonicParsing="false" text="Exit" />
                      </items>
                   </Menu>
             <Menu mnemonicParsing="false" text="Edit">
               <items>
-                <MenuItem mnemonicParsing="false" text="Edit prices" />
+                <MenuItem fx:id="EditPricesMenuItem" mnemonicParsing="false" text="Edit prices" />
               </items>
             </Menu>
             <Menu mnemonicParsing="false" text="Show">
               <items>
-                <MenuItem mnemonicParsing="false" text="Customer Complaints..." />
-                        <MenuItem mnemonicParsing="false" text="My parking spots" />
+                <MenuItem fx:id="CustomerComplainsMenuItem" mnemonicParsing="false" text="Customer Complaints..." />
+                        <MenuItem fx:id="ParkingSpotsMenuItem" mnemonicParsing="false" text="My parking spots" />
               </items>
             </Menu>
             <Menu mnemonicParsing="false" text="Help">
