--- a/src/application/LoginWindow.fxml
+++ b/src/application/LoginWindow.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="204.99940000001516" prefWidth="270.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="application.LoginWindowController">
+<AnchorPane prefHeight="204.99940000001516" prefWidth="270.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.LoginWindowController">
   <!-- TODO Add Nodes -->
   <children>
     <GridPane alignment="TOP_LEFT" gridLinesVisible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
@@ -14,7 +14,7 @@
         <Label text="Username" visible="true" GridPane.columnIndex="0" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
         <Label alignment="CENTER" contentDisplay="CENTER" text="Password" GridPane.columnIndex="0" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
         <TextField fx:id="UsernameTB" prefWidth="200.0" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="1" />
-        <TextField fx:id="PasswordTF" alignment="CENTER_LEFT" prefWidth="200.0" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="2" />
+            <PasswordField fx:id="PasswordTF" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="2" />
         <Label text="Parking system" textAlignment="JUSTIFY" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="0" GridPane.valignment="CENTER" />
         <Button fx:id="RegisterButton" mnemonicParsing="false" onAction="#RegisterClick" text="Sign in" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER">
           <GridPane.margin>
