--- a/src/application/EmployeeWindow.fxml
+++ b/src/application/EmployeeWindow.fxml
@@ -62,11 +62,11 @@
                <children>
                   <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" style="-fx-background-color: gray;" GridPane.columnIndex="1">
                      <children>
-                        <Button fx:id="VehicleEnterButton" mnemonicParsing="false" onAction="#VehicleEnterMethod" text="הכנסת רכב" />
+                        <Button fx:id="VehicleEnterButton" mnemonicParsing="false" onAction="#VehicleEnterMethod" text="Insert Vehicle" />
                         <Region prefHeight="40.0" prefWidth="80.0" />
-                        <Button fx:id="VehicleLeaveButton" mnemonicParsing="false" onAction="#VehicleLeaveMethod" text="הוצאת רכב" />
+                        <Button fx:id="VehicleLeaveButton" mnemonicParsing="false" onAction="#VehicleLeaveMethod" text="Remove Vehicle" />
                         <Region prefHeight="41.0" prefWidth="70.0" />
-                        <Button fx:id="ParkingCancelButton" mnemonicParsing="false" onAction="#ParkingCancelMethod" text="ביטול חנייה" />
+                        <Button fx:id="ParkingCancelButton" mnemonicParsing="false" onAction="#ParkingCancelMethod" text="Cancel Parking" />
                      </children>
                   </VBox>
                   <Label prefHeight="61.0" prefWidth="192.0" text="ADD CUR STORED VEHICLES THEIR TIME AND STUFF HER" wrapText="true" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
