--- a/src/application/CompaintWindow.fxml
+++ b/src/application/CompaintWindow.fxml
@@ -62,7 +62,7 @@
             <Insets bottom="10.0" />
          </opaqueInsets>
          <BorderPane.margin>
-            <Insets bottom="10.0" />
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </BorderPane.margin>
       </TextArea>
    </center>
