--- a/src/application/EmployeeWindow.fxml
+++ b/src/application/EmployeeWindow.fxml
@@ -32,7 +32,7 @@
                         <MenuItem fx:id="FullTimeSubscriptionMenuItem" mnemonicParsing="false" onAction="#FullTimeSubscriptionMenuItemClick" text="Full-Time Subscription" />
                     </items>
                   </Menu>
-            <Menu mnemonicParsing="false" text="Edit">
+            <Menu fx:id="EditMenu" mnemonicParsing="false" text="Edit">
               <items>
                 <MenuItem fx:id="EditPricesMenuItem" mnemonicParsing="false" text="Edit prices" />
               </items>
@@ -41,6 +41,7 @@
               <items>
                 <MenuItem fx:id="CustomerComplainsMenuItem" mnemonicParsing="false" text="Customer Complaints..." />
                         <MenuItem fx:id="ParkingSpotsMenuItem" mnemonicParsing="false" text="My parking spots" />
+                        <MenuItem fx:id="MyComplaintsMenuItem" mnemonicParsing="false" onAction="#MyComplaintsMenuItemClick" text="My Complaints" />
               </items>
             </Menu>
             <Menu mnemonicParsing="false" text="Help">
