--- a/src/application/MyComplaintsWindow.fxml
+++ b/src/application/MyComplaintsWindow.fxml
@@ -7,10 +7,16 @@
 
 <AnchorPane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.MyComplaintsWindowController">
    <children>
-      <ScrollPane layoutX="-138.0" layoutY="-138.0" prefHeight="200.0" prefWidth="200.0">
-        <content>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" />
-        </content>
-      </ScrollPane>
+      <Pane prefHeight="400.0" prefWidth="300.0">
+         <children>
+            <TableView layoutX="25.0" layoutY="44.0" prefHeight="300.0" prefWidth="250.0">
+              <columns>
+                <TableColumn prefWidth="75.0" text="user" />
+                <TableColumn prefWidth="113.0" text="complaint" />
+                  <TableColumn prefWidth="61.0" text="status" />
+              </columns>
+            </TableView>
+         </children>
+      </Pane>
    </children>
 </AnchorPane>
