--- a/src/application/MyComplaintsWindow.fxml
+++ b/src/application/MyComplaintsWindow.fxml
@@ -9,15 +9,22 @@
    <children>
       <Pane prefHeight="400.0" prefWidth="500.0">
          <children>
-            <TableView fx:id="ComplaintsTable" layoutX="25.0" layoutY="44.0" prefHeight="300.0" prefWidth="450.0">
+            <TableView fx:id="ComplaintsTable" editable="true" layoutX="25.0" layoutY="44.0" prefHeight="177.0" prefWidth="450.0">
               <columns>
-                  <TableColumn fx:id="idColumn" prefWidth="75.0" text="id" />
-                <TableColumn fx:id="complaintColumn" prefWidth="113.0" text="complaint" />
-                <TableColumn fx:id="dateColumn" prefWidth="75.0" text="user" />
-                  <TableColumn fx:id="responseColumn" prefWidth="75.0" text="response" />
-                  <TableColumn fx:id="statusColumn" prefWidth="61.0" text="status" />
+                  <TableColumn fx:id="idColumn" editable="false" prefWidth="75.0" text="id" />
+                <TableColumn fx:id="complaintColumn" editable="false" prefWidth="128.0" text="complaint" />
+                <TableColumn fx:id="dateColumn" editable="false" prefWidth="60.0" text="date" />
+                  <TableColumn fx:id="responseColumn" editable="false" prefWidth="119.0" text="response" />
+                  <TableColumn fx:id="statusColumn" editable="false" prefWidth="67.0" text="status" />
               </columns>
+               <columnResizePolicy>
+                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+               </columnResizePolicy>
             </TableView>
+            <TextArea fx:id="CustomerComplaintBox" layoutX="25.0" layoutY="260.0" prefHeight="126.0" prefWidth="200.0" />
+            <TextArea fx:id="ResponseBox" layoutX="275.0" layoutY="260.0" prefHeight="126.0" prefWidth="200.0" />
+            <Label layoutX="86.0" layoutY="234.0" text="My Complaint:" />
+            <Label layoutX="298.0" layoutY="234.0" text="Customer Support Response:" />
          </children>
       </Pane>
    </children>
