--- a/src/application/EmployeeWindow.fxml
+++ b/src/application/EmployeeWindow.fxml
@@ -39,7 +39,7 @@
             </Menu>
             <Menu mnemonicParsing="false" text="Show">
               <items>
-                <MenuItem fx:id="CustomerComplainsMenuItem" mnemonicParsing="false" text="Customer Complaints..." />
+                <MenuItem fx:id="CustomerComplainsMenuItem" mnemonicParsing="false" onAction="#CustomerComplainsMenuItemClick" text="Customer Complaints..." />
                         <MenuItem fx:id="ParkingSpotsMenuItem" mnemonicParsing="false" text="My parking spots" />
                         <MenuItem fx:id="MyComplaintsMenuItem" mnemonicParsing="false" onAction="#MyComplaintsMenuItemClick" text="My Complaints" />
               </items>
