Added part of price change request

--- a/src/application/EmployeeWindow.fxml
+++ b/src/application/EmployeeWindow.fxml
@@ -35,6 +35,7 @@
             <Menu fx:id="EditMenu" mnemonicParsing="false" text="Edit">
               <items>
                 <MenuItem fx:id="EditPricesMenuItem" mnemonicParsing="false" onAction="#EditPricesMenuItemClick" text="Edit prices" />
+                        <MenuItem fx:id="PriceChangesMenuItem" mnemonicParsing="false" onAction="#PriceChangesMenuItemClick" text="Price Change requests" />
               </items>
             </Menu>
             <Menu mnemonicParsing="false" text="Show">
