--- a/src/application/OneTimeParkingOrderWindow.fxml
+++ b/src/application/OneTimeParkingOrderWindow.fxml
@@ -8,67 +8,73 @@
 <?import javafx.scene.layout.AnchorPane?>
 
 <AnchorPane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.OneTimeParkingOrderWindowController">
-  <!-- TODO Add Nodes -->
-  <children>
-    <Pane layoutX="0.0" layoutY="0.0" prefHeight="300.0" prefWidth="300.0">
-      <children>
-        <GridPane layoutX="50.0" layoutY="11.0" prefHeight="243.0" prefWidth="220.0">
-          <children>
-            <Label text="ID" GridPane.columnIndex="0" GridPane.rowIndex="0" />
-            <Label text="CarID" GridPane.columnIndex="0" GridPane.rowIndex="1" />
-            <Label text="Requested mall" GridPane.columnIndex="0" GridPane.rowIndex="2" />
-            <Label text="Arrival Date" GridPane.columnIndex="0" GridPane.rowIndex="3" />
-                  <DatePicker fx:id="ArrivalDateBox" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                  <Label text="Arrival Time" GridPane.rowIndex="4" />
-                  <Label text=":" GridPane.columnIndex="1" GridPane.rowIndex="4">
-                     <GridPane.margin>
-                        <Insets left="60.0" />
-                     </GridPane.margin>
-                  </Label>
-                  <Label text="Leave Date" GridPane.rowIndex="5" />
-                  <Label text="Leave Time" GridPane.rowIndex="6" />
-                  <DatePicker fx:id="LeaveDateBox" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-                  <Label text=":" GridPane.columnIndex="1" GridPane.rowIndex="6">
-                     <GridPane.margin>
-                        <Insets left="60.0" />
-                     </GridPane.margin>
-                  </Label>
-                  <Label text="Mail" GridPane.rowIndex="7" />
-                  <TextField fx:id="CarIDTB" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                  <TextField fx:id="IDTB" GridPane.columnIndex="1" />
-                  <TextField fx:id="EmailTB" GridPane.columnIndex="1" GridPane.rowIndex="7" />
-                  <ComboBox fx:id="RequestedMallMENU" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                  <ComboBox fx:id="ArrivalTimeHourBox" prefHeight="25.0" prefWidth="57.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-                  <ComboBox fx:id="ArrivalTimeMinuteBox" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="4">
-                     <GridPane.margin>
-                        <Insets left="65.0" />
-                     </GridPane.margin>
-                  </ComboBox>
-                  <ComboBox fx:id="LeaveTimeHourBox" prefHeight="25.0" prefWidth="57.0" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-                  <ComboBox fx:id="LeaveTimeMinuteBox" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="6">
-                     <GridPane.margin>
-                        <Insets left="65.0" />
-                     </GridPane.margin>
-                  </ComboBox>
-          </children>
-          <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="95.0" minWidth="10.0" prefWidth="85.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="125.0" minWidth="10.0" prefWidth="125.0" />
-          </columnConstraints>
-          <rowConstraints>
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          </rowConstraints>
-        </GridPane>
-            <Button fx:id="OrderButton" layoutX="50.0" layoutY="261.0" mnemonicParsing="false" onAction="#OrderButtonClick" text="Order" />
-            <Label fx:id="PriceLabel" layoutX="220.0" layoutY="265.0" text="Price:" />
-      </children>
-    </Pane>
-  </children>
+	<!-- TODO Add Nodes -->
+	<children>
+		<Pane layoutX="0.0" layoutY="0.0" prefHeight="300.0" prefWidth="300.0">
+			<children>
+				<GridPane layoutX="50.0" layoutY="11.0" prefHeight="243.0" prefWidth="220.0">
+					<children>
+						<Label text="ID" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+						<Label text="CarID" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+						<Label text="Requested mall" GridPane.columnIndex="0" GridPane.rowIndex="2" />
+						<Label text="Arrival Date" GridPane.columnIndex="0" GridPane.rowIndex="3" />
+						<Label text="Arrival Time" GridPane.rowIndex="4" />
+						<Label text=":" GridPane.columnIndex="1" GridPane.rowIndex="4">
+							<GridPane.margin>
+								<Insets left="60.0" />
+							</GridPane.margin>
+						</Label>
+						<Label text="Leave Date" GridPane.rowIndex="5" />
+						<Label text="Leave Time" GridPane.rowIndex="6" />
+						<Label text=":" GridPane.columnIndex="1" GridPane.rowIndex="6">
+							<GridPane.margin>
+								<Insets left="60.0" />
+							</GridPane.margin>
+						</Label>
+						<Label text="Mail" GridPane.rowIndex="7" />
+						<TextField fx:id="IDTB" promptText="123456789" GridPane.columnIndex="1">
+                     <tooltip>
+                        <Tooltip text="Please enter 9 numbers." />
+                     </tooltip></TextField>
+						<TextField fx:id="CarIDTB" promptText="1234567" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                     <tooltip>
+                        <Tooltip text="Enter your car's ID" />
+                     </tooltip></TextField>
+						<ComboBox fx:id="RequestedMallMENU" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+						<DatePicker fx:id="ArrivalDateBox" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+						<ComboBox fx:id="ArrivalTimeHourBox" prefHeight="25.0" prefWidth="57.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+						<ComboBox fx:id="ArrivalTimeMinuteBox" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="4">
+							<GridPane.margin>
+								<Insets left="65.0" />
+							</GridPane.margin>
+						</ComboBox>
+						<DatePicker fx:id="LeaveDateBox" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+						<ComboBox fx:id="LeaveTimeHourBox" prefHeight="25.0" prefWidth="57.0" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+						<ComboBox fx:id="LeaveTimeMinuteBox" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="6">
+							<GridPane.margin>
+								<Insets left="65.0" />
+							</GridPane.margin>
+						</ComboBox>
+						<TextField fx:id="EmailTB" promptText="bob@gmail.com" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+					</children>
+					<columnConstraints>
+						<ColumnConstraints hgrow="SOMETIMES" maxWidth="95.0" minWidth="10.0" prefWidth="85.0" />
+						<ColumnConstraints hgrow="SOMETIMES" maxWidth="125.0" minWidth="10.0" prefWidth="125.0" />
+					</columnConstraints>
+					<rowConstraints>
+						<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+						<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+						<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+						<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+						<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+						<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+						<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+						<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+					</rowConstraints>
+				</GridPane>
+				<Button fx:id="OrderButton" layoutX="50.0" layoutY="261.0" mnemonicParsing="false" onAction="#OrderButtonClick" text="Order" />
+				<Label fx:id="PriceLabel" layoutX="220.0" layoutY="265.0" text="Price:" />
+			</children>
+		</Pane>
+	</children>
 </AnchorPane>
