--- a/src/application/ParkingStatusWindow.fxml
+++ b/src/application/ParkingStatusWindow.fxml
@@ -15,7 +15,10 @@
       </ComboBox>
       <HBox prefHeight="100.0" prefWidth="200.0">
          <children>
-            <TilePane fx:id="MallSpotsTilePane" tileAlignment="TOP_LEFT" />
+            <TilePane fx:id="MallSpotsTilePane" alignment="CENTER" tileAlignment="TOP_LEFT">
+               <HBox.margin>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </HBox.margin></TilePane>
          </children>
       </HBox>
    </children>
